# demo_projections

./: README.md
demo_opengl_project/: CMakeLists.txt  demo_opengl_project.sln  demo_opengl_project.vcxproj  demo_opengl_project.vcxproj.filters  imgui.ini
demo_opengl_project/Debug/: demo_opengl_project.exe.recipe  demo_opengl_project.vcxproj.FileListAbsolute.txt  vc142.idb
demo_opengl_project/Debug/demo_ope.8b523642.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  demo_opengl_project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
demo_opengl_project/Dependencies/GLAD/: glad.c
demo_opengl_project/Dependencies/GLAD/include/glad/: glad.h
demo_opengl_project/Dependencies/GLFW/include/GLFW/: glfw3.h
demo_opengl_project/Dependencies/GLFW/lib/: glfw3.lib
demo_opengl_project/src/base/: GLCoreUtils.h  glpch.h
demo_opengl_project/src/base/GLCore/Core/: Application.cpp  Application.h
demo_opengl_project/src/base/GLCore/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
demo_opengl_project/src/base/GLCore/Util/: OpenGLDebug.cpp  OpenGLDebug.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  Shader.cpp  Shader.h
demo_opengl_project/src/base/Platform/Windows/: WindowsInput.cpp
demo_opengl_project/src/examples/: ExampleApp.cpp  ExampleLayer.cpp  ExampleLayer.h
demo_opengl_project/src/glad/: glad.c
